rocket/assets/styles/elements/cart/side-cart.scss
.side-cart-header {
    display: flex;
    flex-flow: row;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    top: 0;
    width: clamp(329px, 85vw, 404px);
    padding: 28px 35px 11px;
    background-color: var(--background-color);

    .close-modal {
        padding: 8px 11px;
        background-color: var(--default-background-color);
        border-radius: var(--theme-border-radius);
        border: 2px solid var(--close-modal-border-color);
        height: 40px;
        width: 40px;
        display: flex;
        align-items: center;
        justify-content: center;
    }

    @media screen and (max-width: 450px) {
        padding: 13px 20px 11px;
    }

    &.--overflows {
        box-shadow: 0px 1px 25px rgba(0, 0, 0, 0.05);
    }
}

.side-cart-title {
    font-size: var(--font-25);
    line-height: 34px;
    color: var(--black-dark-color-contrast);

    @media screen and (max-width: 450px) {
        font-size: var(--font-20);
    }
}

.side-cart-container {
    height: 100%;
    display: flex;

    .icon-close-modal {
        cursor: pointer;
        width: 50px;
        height: 50px;
    }

    .empty-cart {
        position: fixed;
        display: flex;
        flex-flow: column;
        bottom: 0;
        width: clamp(329px, 85vw, 404px);
        text-align: center;
        color: var(--background-contrasting-color);
        line-height: 1.4;
        height: calc(100% - 84px);
        justify-content: center;
        align-items: center;

        .-title {
            font-size: var(--font-18);
        }

        .-subtitle {
            font-size: var(--font-15);
            margin: 5px 28px 0 28px;
        }

        i {
            margin-bottom: 19px;
        }

        @media screen and (max-width: 450px) {
            height: calc(100% - 69px);
        }

        .-cta-holder {
            display: flex;
            justify-content: center;
            margin: 24px 20px 0 20px;
            width: 100%;
        }

        .-cta {
            background-color: var(--black-medium);
            border-radius: var(--theme-border-radius);
            color: var(--white);
            cursor: pointer;
            font-weight: var(--font-bold);
            padding: 18px 17px;
            max-width: 280px;
            text-decoration: none;
            text-transform: uppercase;
            transition: opacity 0.3s ease-in-out;
            width: 100%;

            &:hover {
                opacity: var(--default-opacity);
            }
        }
    }
}

.side-cart-content {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    background-color: var(--background-color);
    padding: 105px 0 0 0;
    height: 100%;
    width: 100%;

    &.--overflows {
        padding: 85px 0 0 0;

        @media screen and (max-width: 450px) {
            padding: 70px 0 0 0;
        }
    }

    @media screen and (max-width: 450px) {
        padding: 92px 0 0 0;
    }
}

.side-cart-products-list {
    overflow: auto;
    overflow-x: hidden;
    flex: 1 0 0;
    padding: 0px 35px 0;
    transition: box-shadow 0.3s ease-in-out;

    &.--overflows {
        padding: 0px 24px 0px 36px;
    }

    @media screen and (max-width: 450px) {
        padding: 0px 20px 0 !important;
    }
}

.continue-buying {
    display: inline-block;
    cursor: pointer;
    color: var(--color-general-primary);
    font-size: var(--font-15);
    margin: 31px 0;
    padding: 10px;
    transition: opacity 300ms;

    svg {
        fill: var(--color-general-primary);
        height: 10px;
    }

    &:hover {
        opacity: 0.7;
    }

    span {
        display: inline-block;
        width: 10px;
        margin: 0 4px 0 0;
    }
}

.side-cart-button {
    width: 100%;
    height: 50px;
}

.side-cart-row {
    display: flex;
    justify-content: space-between;
}

.side-cart-button-container {
    width: clamp(329px, 84vw, 403px);
    margin: 0 auto;
    background-color: var(--background-color);
    transition: box-shadow 0.3s ease-in-out;
    padding: 22px 35px 30px;
    position: sticky;
    bottom: 0;
    right: 0;
    z-index: 1;
    border-top: 1px solid var(--default-background-color);

    hr {
        margin: 0 -35px 0;
    }

    @media only screen and (max-width: 700px) {
        hr {
            margin: 0 -35px 20px !important;
        }
    }

    @media screen and (max-width: 450px) {
        padding: 32.5px 20px 0;

        hr {
            margin: 0 -20px 20px !important;
        }
    }

    &.--overflows {
        border: solid 0px var(--default-background-color);
        box-shadow: 0px 1px 25px rgba(0, 0, 0, 0.05);
    }
}

.side-cart-box-shadow {
    box-shadow: 0px 1px 25px rgba(0, 0, 0, 0.05);
}

.side-cart-total-value {
    display: flex;
    flex-flow: column;
    width: 100%;
    justify-content: space-between;
}

.buy-together-cart-group {
    &__container {
        border: 1px dashed var(--black-medium-color-contrast);
        box-sizing: border-box;
        border-radius: var(--mini-cart-buy-together--border-radius);
        padding: 16px 12px 12px;
        margin: 11.5px 1px 21px;

        @media screen and (max-width: 450px) {
            margin: 5px 1px 21px;
        }
    }

    &-title {
        display: block;
        width: 90px;
        margin: -23px -20px 0 12px;
        background-color: var(--background-color);
        font-weight: var(--font-bold);
        font-size: var(--font-11);
        line-height: 13px;
        color: var(--black-dark-color-contrast);
        text-align: center;
        padding: 0 2px;
    }
}

.side-cart-remove {
    cursor: pointer;
    float: right;
    width: 48px;
    display: flex;
    align-items: center;
    flex-direction: column;

    svg {
        fill: var(--background-contrasting-color);
        margin: 0;
    }

    .remove-text {
        text-transform: uppercase;
        text-align: center;
        font-size: 9px;
        color: var(--background-contrasting-color);
        margin: -10px 0;
    }
}

.buy-together-total-value {
    display: flex;
    flex-flow: column nowrap;
    background-color: var(--product-card-smoky-background);
    padding: 8px 0 7px;
    border-radius: var(--mini-cart-buy-together--border-radius);

    .row {
        display: flex;
        justify-content: center;
    }

    .text {
        display: inline-block;
        text-align: center;
        margin: 0 2px;
    }

    .discount-original-value {
        color: var(--black-light-color-contrast);
        text-decoration: line-through;
        font-size: var(--font-12);
        line-height: 14px;
    }

    .after-discount-value {
        color: var(--color-general-primary);
        font-size: var(--font-14);
        line-height: 14px;
        font-weight: var(--font-bold);
    }

    .discount-percent {
        font-size: var(--font-12);
        line-height: 14px;
        color: var(--black-dark-color-contrast);
    }
}

.side-cart-total-text {
    font-size: var(--font-12);
    line-height: 18px;
    text-transform: uppercase;
    color: var(--black-medium-color-contrast);
}

.side-cart-subtotal {
    font-weight: var(--font-bold);
    font-size: var(--font-14);
    line-height: 18px;
    color: var(--black-medium-color-contrast);

    &-after-discounts {
        @extend .side-cart-subtotal;
        color: var(--color-general-primary);
        font-size: var(--font-16);
    }
}

.side-cart-savings-text {
    font-size: var(--font-12);
    line-height: 18px;
    text-transform: uppercase;
    color: var(--color-btn-primary-background-outline);
}

.side-cart-savings-price {
    font-weight: var(--font-bold);
    font-size: var(--font-14);
    line-height: 18px;
    color: var(--color-btn-primary-background-outline);
}

